# hypergeo2

./: .Rbuildignore  .gitattributes  .gitignore  DESCRIPTION  LICENSE  LICENSE.md  NAMESPACE  NEWS.md  README.Rmd  README.md  aclocal.m4  cleanup  configure  configure.ac  configure.win  cran-comments.md
.github/workflows/: R-CMD-check.yaml
R/: RcppExports.R  hypergeo.R  hypergeo2-package.R
inst/include/: hypergeo2.h  hypergeo2_RcppExports.h
inst/include/hypergeo2/: hypergeo.h.in
man/: genhypergeo.Rd  hypergeo2-package.Rd
src/: Makevars.in  Makevars.win  RcppExports.cpp  config.h.in  config.h.win  hypergeo.cpp  hypergeo_impl.cpp  hypergeo_impl.h
tests/: testthat.R
tests/testthat/: test-genhypergeo.R
